--- a/css/reset.scss
+++ b/css/reset.scss
@@ -19,7 +19,7 @@ time, mark, audio, video {
   margin: 0;
   padding: 0;
   border: 0;
-  font-size: get-vw(16px);
+  font-size:100%;
   font-family: 'Spoqa Han Sans Neo', 'Spoqa Han Sans JP', "돋움", Dotum, Arial, sans-serif;
   font-weight:400;
   font-style:normal;
@@ -27,23 +27,6 @@ time, mark, audio, video {
   box-sizing: border-box;
   -webkit-box-sizing: border-box;
   word-break: break-word;
-}
-@media all and (min-width: 961px) {
-  html, body, div, span, applet, object, iframe,
-  h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-  a, abbr, acronym, address, big, cite, code,
-  del, dfn, em, img, ins, kbd, q, s, samp,
-  small, strike, strong, sub, sup, tt, var,
-  b, u, i, center,
-  dl, dt, dd, ol, ul, li,
-  fieldset, form, input, label, legend,
-  table, caption, tbody, tfoot, thead, tr, th, td,
-  article, aside, canvas, details, embed,
-  figure, figcaption, footer, header, hgroup,
-  menu, nav, output, ruby, section, summary,
-  time, mark, audio, video {
-    font-size:16px;
-  }
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
